<?xml version="1.0"?>
<package format="2">
  <version>1.0.0</version>
  <name>semantic_map_slam</name>
  <description>Simulation scene for yandex.ru/profi contest. Demo scene</description>

  <maintainer email="superuser@todo.todo">superuser</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>controller_manager</depend>
  <depend>joint_state_controller</depend>
  <depend>robot_state_publisher</depend>
  <depend>message_runtime</depend>
  <depend>message_generation</depend>
  <depend>tf2_ros</depend>
  <depend>vision_msgs</depend>
  <depend>nav_msgs</depend>    
  <depend>darknet_ros</depend>          <!-- YOLO wrapper -->
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>sensor_msgs</depend>

  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>